Added Tests For All Pages
No Layout Simple Static Pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,13 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, 'Online Tutorial') %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>A Little Something About <%= yield(:title) %></title>
+  </head>
+  <body>
+    <h1>Help</h1>
+    <p>
+      <p>This is the page describing a little something about us</p>
+    </p>
+  </body>
+</html>
