--- a/app/views/static_pages/programs.html.erb
+++ b/app/views/static_pages/programs.html.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>This Where to Contact <%= yield(:title) %></title>
+    <title><%= yield(:title) %> Programs</title>
   </head>
   <body>
     <h1>Help</h1>
