--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,13 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Online Tutorial') %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Welcome To <%= yield(:title) %> Help Center </title>
+  </head>
+  <body>
+    <h1>Help</h1>
+    <p>
+      <p>This is the page describing a little something about us</p>
+    </p>
+  </body>
+</html>
