--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Welcome To Online Tutorial</h1>
+<p>
+Online Tutorial Welcomes You! Each individual has the need to learn something special that they are interested in.
+</p>
