--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,13 +1,13 @@
-<% provide(:title, 'Online Tutorial') %>
+<% provide(:title, 'About Us') %>
 <!DOCTYPE html>
 <html>
   <head>
     <title>A Little Something About <%= yield(:title) %></title>
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>In Detail!</h1>
     <p>
-      <p>This is the page describing a little something about us</p>
+      <p>A Little Something About what we do!</p>
     </p>
   </body>
 </html>
