--- a/app/views/static_pages/programs.html.erb
+++ b/app/views/static_pages/programs.html.erb
@@ -1,13 +1,13 @@
-<% provide(:title, 'Online Tutorial') %>
+<% provide(:title, 'Programs') %>
 <!DOCTYPE html>
 <html>
   <head>
     <title><%= yield(:title) %> Programs</title>
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>All Programs</h1>
     <p>
-      <p>This is the page describing a little something about us</p>
+      <p>This page describes in compeltion all the programs listed</p>
     </p>
   </body>
 </html>
