--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,13 +1,13 @@
-<% provide(:title, 'Online Tutorial') %>
+<% provide(:title, 'Contact Us') %>
 <!DOCTYPE html>
 <html>
   <head>
     <title>This Where to Contact <%= yield(:title) %></title>
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>Contacting Us?</h1>
     <p>
-      <p>This is the page describing a little something about us</p>
+      <p>This is where to contact us!!!</p>
     </p>
   </body>
 </html>
