--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -5,7 +5,7 @@
     <title>Welcome To <%= yield(:title) %> Help Center </title>
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>Help Center</h1>
     <p>
       <p>This is the page describing a little something about us</p>
     </p>
