Tests With Student Login
Student Login Functionality with authentication and Sessions Added. All
Tests Passing!

Profile has to be completed!

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,11 +4,11 @@ Online Tutorial Welcomes You! Each individual has the need to learn something sp
 </p>
 
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome Online Tutorial</h1>
 
   <h2>
     This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    <a href="http://railstutorial.org/">Online E Tutorial</a>
     sample application.
   </h2>
 
