--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "Online Tutorial", '#', id: "logo" %>
+      <%= link_to "Online Tutorial", 'root_path', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
@@ -9,6 +9,24 @@
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
           <li><%= link_to "Program", programs_path %></li>
+          <% if signed_on? %>
+            <li><%= link_to "Students", '#' %></li>
+            <li id="fat-menu" class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Account <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profile", students_path(current_student) %></li>
+                <li><%= link_to "Settings", '#' %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "Sign Off", signoff_path, method: "delete" %>
+                </li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "Sign On", signon_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
