--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,8 +16,8 @@
                 Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Profile", students_path(current_student) %></li>
-                <li><%= link_to "Settings", '#' %></li>
+                <li><%= link_to "Profile", student_path(current_student) %></li>
+                <li><%= link_to "Settings", edit_student_path(current_student) %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Sign Off", signoff_path, method: "delete" %>
